--- a/updates.css
+++ b/updates.css
@@ -1,8 +1,63 @@
-a#download
+.toolbar
 {
 	position:absolute;
 	z-index:1002;
 	right:0;
-	margin-top:20px;
-	margin-right:20px;
+	margin-top:12px;
+	margin-right:50px;
+    box-shadow: 3px 3px 3px #888888;
+    border-radius: 3px;
+}
+
+.icon
+{
+	width: 30px;
+	height: 30px;
+}
+
+.btn-l
+{
+	border-top-left-radius: 3px;
+	border-bottom-left-radius: 3px;
+	border-color: rgb(44, 57, 83);
+	border-right-width: 1px;
+	border-right-style: solid;
+	background-color: rgb(72, 91, 128);
+	height: 30px;
+	width: 30px;
+	padding: 5px;
+}
+
+.btn-r
+{
+	border-color: black;
+	border-width: 5px;
+	border-top-right-radius: 3px;
+	border-bottom-right-radius: 3px;
+	border-top-left-radius: 3px;
+	border-bottom-left-radius: 3px;
+	background-color: rgb(72, 91, 128);
+	height: 30px;
+	width: 30px;
+	padding: 5px;
+}
+
+.btn-r:hover,
+.btn-r:focus,
+.btn-r:active 
+{
+    background-color: rgb(78, 108, 165);
+}
+
+.btn-l:hover,
+.btn-l:focus,
+.btn-l:active 
+{
+    background-color: rgb(78, 108, 165);
+}
+
+@media print {
+	div {display: none;}
+	p {display: none;}
+	img{ display: visible}
 }
