--- a/updates.css
+++ b/updates.css
@@ -34,8 +34,6 @@
 	border-width: 5px;
 	border-top-right-radius: 3px;
 	border-bottom-right-radius: 3px;
-	border-top-left-radius: 3px;
-	border-bottom-left-radius: 3px;
 	background-color: rgb(72, 91, 128);
 	height: 30px;
 	width: 30px;
@@ -58,10 +56,11 @@
 
 .visible {display: none;}
 
+.blob {
+	width: 100%; height: 100%;
+}
+
 @media print {
-	div {display: none;}
-	p {display: none;}
-	img{ display: none;}
 	.visible{ display: block;}
 	.invisible{ display: none;}
 	#shadow-root{ display: none;}
